--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="row">
         <div class="col">
           <h1 id="city">Amsterdam</h1>
-          Monday 12:40
+          <div id="current-date">Monday 12:40</div>
         </div>
 
         <div class="col">
