--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="row">
         <div class="col">
           <h1 id="city">Amsterdam</h1>
-          <div id="current-date">Monday 12:40</div>
+          <div>Last updated at <span id="current-date">Monday 12:40</span></div>
         </div>
 
         <div class="col">
@@ -53,7 +53,7 @@
       
 <div class="col second-column">
          
-          <img src="images/partly-cloudy.jpg" width="100" />
+          <img id="icon"src="images/partly-cloudy.jpg" width="100" />
         </div>
       <div class="col third-column">
         <div id="clouds">Clouds</div>
