added relevant icon

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       
 <div class="col second-column">
          
-          <img id="icon"src="images/partly-cloudy.jpg" width="100" />
+          <img id="icon"src="" alt="clear" width="100" />
         </div>
       <div class="col third-column">
         <div id="clouds">Clouds</div>
-        <div >Humidity: <span id="humidity">73</span>%</div>
-        <div >Windspeed: <span id="windspeed">2.68</span></div>
+        <div>Humidity: <span id="humidity">73</span>%</div>
+        <div>Windspeed: <span id="windspeed">2.68</span></div>
       </div>
     </div>
 </div>
