added the search engine

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="col third-column">
         <div id="clouds">Clouds</div>
         <div>Humidity: <span id="humidity">73</span>%</div>
-        <div>Windspeed: <span id="windspeed">2.68</span></div>
+        <div>Windspeed: <span id="windspeed">2.68</span> km/h</div>
       </div>
     </div>
 </div>
