--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       </div>
     </div>
 </div>
+<small><a href="https://github.com/yyr19/Shecodes-plus-project">Open-source code</a> by Yasmin Reeb</small>
     <script src="src/script.js"></script>
   </body>
 </html>
