--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
         <div>Humidity: <span id="humidity">73</span>%</div>
         <div>Windspeed: <span id="windspeed">2</span> km/h</div>
       </div>
+      <div class="weather-forecast">
+        <div class="row">
+          <div class="col-2">Tue
+<div><img src="http://openweathermap.org/img/wn/03d@2x.png" alt="" width="100">
+</div>
+<div><span class="weather-forecast-max">6° </span>| <span class="weather-forecast-min">2° </span></div>
+          </div>
+
+
+        </div>
+
+      </div>
     </div>
 </div>
 <small><a href="https://github.com/yyr19/Shecodes-plus-project">Open-source code</a> by Yasmin Reeb</small>
