--- a/index.html
+++ b/index.html
@@ -63,16 +63,8 @@
         <div>Humidity: <span id="humidity">73</span>%</div>
         <div>Windspeed: <span id="windspeed">2</span> km/h</div>
       </div>
-      <div class="weather-forecast">
-        <div class="row">
-          <div class="col-2">Tue
-<div><img src="http://openweathermap.org/img/wn/03d@2x.png" alt="" width="100">
-</div>
-<div><span class="weather-forecast-max">6° </span>| <span class="weather-forecast-min">2° </span></div>
-          </div>
-
-
-        </div>
+      <div class="weather-forecast" id="forecast">
+        
 
       </div>
     </div>
